All sylabus pages
Updating links padding and footer thanks

--- a/syllabuspages/screen.css
+++ b/syllabuspages/screen.css
@@ -142,7 +142,10 @@ nav {
 }
 #links,
 #instructor {
-  margin-top: 2.5263157895em;
+  margin-top: 2.4em;
+}
+#links {
+	padding-top: 2.4em;
 }
 
 /* ========== Modules ========== */
