--- a/demos/class9demo/Nav Demo Continued/css/style.css
+++ b/demos/class9demo/Nav Demo Continued/css/style.css
@@ -115,7 +115,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a90329', end
 	text-decoration: underline;
 }
 
-a[href$=".pdf"] {
+a[href$=".p"] {
+  
 
 }
 
@@ -137,8 +138,7 @@ body {
 
 	body {
 		background-image: url('../img/pdf.png');
-	
-}
+	}
 }
 
 
